--- a/application.yml
+++ b/application.yml
@@ -2,5 +2,5 @@
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8010/eureka/
+      defaultZone: http://localhost:8005/eureka/,http://localhost:8006/eureka/,http://localhost:8007/eureka/
       
